[*] sharing component styles z-index fix

--- a/wp-content/themes/jupiter-child/assets/postcss/miscellaneous.pcss
+++ b/wp-content/themes/jupiter-child/assets/postcss/miscellaneous.pcss
@@ -250,3 +250,7 @@ html {
         margin-top: 20px;
     }
 }
+
+.mk-blog-modern-item .blog-social-share {
+    z-index: 20 !important;
+}
